[gd_scene load_steps=3 format=3 uid="uid://375moew37k4r"]

[ext_resource type="Script" uid="uid://bg7ur65h7yytk" path="res://scenes/main.gd" id="1_28q6k"]
[ext_resource type="PackedScene" uid="uid://o8vjxrpicjsm" path="res://scenes/menu/main_menu.tscn" id="2_x1b8u"]

[node name="Main" type="Node2D"]
script = ExtResource("1_28q6k")

[node name="MainMenu" parent="." instance=ExtResource("2_x1b8u")]

[connection signal="start_game" from="MainMenu" to="." method="_on_main_menu_start_game"]
[connection signal="start_remote_game" from="MainMenu" to="." method="_on_main_menu_start_remote_game"]
